# BioliteDemo

./: CMakeLists.txt  README.md  icon.icns
media/: biolite-game.xsd  biolite-menu.xsd  biolite-planet.xsd  biolite.xml  custom.xml  default.xml  ideas_with_max.txt  play.xml  tutorial-destroy.xml  utf32to8  young12.xml  young20.xml  young36.xml
sources/: CGUIColorPickDialog.cpp  CGUIColorPickDialog.h  CSceneNodeAnimatorCameraArcball.cpp  CSceneNodeAnimatorCameraArcball.h  IGUIColorPickDialog.h  ISceneNodeAnimatorCameraArcball.h  Makefile  ai.cpp  ai.h  context.cpp  context.h  game.cpp  game.h  game_logic.cpp  game_logic.h  game_math.cpp  game_math.h  game_state_xml_game.cpp  game_state_xml_game.h  game_state_xml_gui.cpp  game_state_xml_gui.h  game_state_xml_still.cpp  game_state_xml_still.h  main.cpp  main.h  media_collection.cpp  media_collection.h  parameter_set.cpp  parameter_set.h  persistant_set.cpp  persistant_set.h  planet.cpp  planet.h  plant.cpp  plant.h  resolution_chooser.cpp  resolution_chooser.h  sound.cpp  sound.h  win.cpp  (+30 more)
